Sforce8 Project Data/src/objects/RoomsStatus__c.object
<CustomObject>
    <fields>
        <fullName>Describe__c</fullName>
        <label>説明</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RoomRef__c</fullName>
        <label>お部屋</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>部屋状態管理</relationshipLabel>
        <relationshipName>RoomRef</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StatusBeginDate__c</fullName>
        <inlineHelpText>該当ステータス開始日</inlineHelpText>
        <label>管理開始日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusEndDate__c</fullName>
        <inlineHelpText>該当ステータス終了日</inlineHelpText>
        <label>管理終了日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>故障</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>部屋状態管理</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>部屋状態管理名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>